# MallPilot

./: .env.example  .env.example.env  .gitignore  Dockerfile  MallPilot_改造交接说明.md  README.md  alembic.ini  build-image.sh  docker-compose.components.yml  docker-compose.yml  docker-deploy.sh  pyproject.toml  requirements.txt  run-image.sh
agents/: agent_orchestrator.py
api/: main.py
config/: prometheus.components.yml  prometheus.yml
core/: commerce_store.py  intent_recognizer.py  skill_loader.py
docs/: 导购Agent后端MVP实现方案.md  导购Agent方案设计.md
evaluation/: evaluator.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mallpilot/: __init__.py
mcp/: knowledge_base.py
memory/: conversation_memory.py
migrations/: env.py
monitor/: performance_monitor.py
scripts/: __init__.py  ingest_products.py
skills/: README.md
sql/: mallpilot_mysql_schema.sql
tests/: test_bailian_client.py  test_chat_api.py  test_chat_frontend.py  test_chat_trace_persistence.py  test_commerce_flows.py  test_db_product_search.py  test_deployment_config.py  test_embedding_ingestion.py  test_guide_flow.py  test_hybrid_retrieval.py  test_ingestion_integration.py  test_llm_flows.py  test_observability_api.py  test_observability_frontend.py  test_pgvector_migration.py  test_product_card.py  test_real_loop_contract.py  test_router.py  test_settings_and_db.py  test_sse_events.py  test_text_chunker.py  test_trace_service.py  test_trace_summary.py
tools/: __init__.py  after_sales_tools.py  guide_tools.py  order_tools.py  tool_registry.py
(+92 files in other folders)
