[project]
name = "mallpilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.15,<2",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "pytest>=8.2,<9",
  "httpx>=0.27,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
